[CI] Publish Documentation for a05731a81370bde4fc4bd82d1c9ef56334bee749 - a05731a81370bde4fc4bd82d1c9ef56334bee749 🚀

--- a/template-tutorial/index.html
+++ b/template-tutorial/index.html
@@ -125,6 +125,9 @@
 <li>
 <p><a href="02-deploy.html#deploy" class="xref page">Deploy the Application</a></p>
 </li>
+<li>
+<p><a href="03-acm.html#deploy" class="xref page">Advanced Cluster Management</a></p>
+</li>
 </ul>
 </div>
 </div>
