[CI] Publish Documentation for a3a1f99eb32c0cc6fac659a9ccb38db48c9a3766 - a3a1f99eb32c0cc6fac659a9ccb38db48c9a3766 🚀

--- a/template-tutorial/index.html
+++ b/template-tutorial/index.html
@@ -74,6 +74,18 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="03-acm.html">3. Advanced Cluster Management</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="03-acm.html#operator">Install Operator</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="03-acm.html#deploy">Deploy Cluster</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </li>
 </ul>
