--- a/template-tutorial/index.html
+++ b/template-tutorial/index.html
@@ -86,6 +86,18 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="#04-gitops.adoc">3. GitOps</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#04-gitops.adoc#operator">Install Operator</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#04-gitops.adoc#deploy">Deploy Application</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </li>
 </ul>
